# cortex-ai

./: .gitignore  BEST-PRACTICES.md  CHANGELOG.md  LICENSE  MANIFEST.in  NOTICE  README.md  pyproject.toml
config/: default-wings.json
cortex/: __init__.py  cli.py  config.py  dream_cli.py  entity_detector.py  mcp_server.py  miner.py  stm_cli.py  version.py
cortex/backends/: __init__.py  base.py  filesystem.py  memory.py
cortex/dream/: __init__.py  consolidate.py  cron.py  decay.py  orchestrator.py  patterns.py  patterns_db.py  prune_72h.py  threshold.py
cortex/instructions/: help.md  init.md
cortex/stm/: __init__.py  classifier.py  fetch.py  log.py  prune.py  rollup.py
cortex/tests/: test_backends.py  test_cli.py  test_dream.py  test_dream_backends.py  test_mcp.py  test_patterns.py  test_stm.py
cortex/tests/fixtures/: sample_72h.jsonl  sample_corrections.jsonl
docs/: BACKENDS.md  DEPLOYMENT.md
examples/: README.md  sample-memory-mine.py  sample-search.py
